--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <div class="container">
         <div class="question" id="question">Question</div>
-        <div class="answer" id="answer1" data-true="false">1</div>
-        <div class="answer" id="answer2" data-true="false">2</div>
-        <div class="answer" id="answer3" data-true="false">3</div>
-        <div class="answer" id="answer4" data-true="false">4</div>
+        <div class="answer" id="answer1" data-isTrue="false">1</div>
+        <div class="answer" id="answer2" data-isTrue="false">2</div>
+        <div class="answer" id="answer3" data-isTrue="false">3</div>
+        <div class="answer" id="answer4" data-isTrue="false">4</div>
         
     </div>
     <div id="results"></div>
